--- a/index.html
+++ b/index.html
@@ -2,25 +2,37 @@
 <html lang = "en">
   <head>
     <meta charset="UTF-8">
-    <title>My Website About Me</title>
+    <title>Braedan's Resume</title>
   </head>
   <body>
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Classes</a></li>
+          <li><a href="index.html">Resume</a></li>
           <li>n/a</li>
           <li>n/a</li>
         </ul>
       </nav>
     </header>
 
-    <h1>Braedan's Classes</h1>
+    <h1>Braedan's Resume</h1>
     <p>bprentice@hawk.iit.edu</p>
 
     <h2>School</h2>
     <p>Jones College Prep</p>
 
+    <h2>Clubs/Sports</h2>
+    <li>Lacrosse</li>
+    <li>Computer Science Honor Society (CSHS)</li>
+    <li>Career Development Club</li>
+
+    <h2>Work</h2>
+    <p>Farmers Market - Chicago's Garden Center</p>
+
+    <h2>Skills</h2>
+    <li>Java</li>
+    <li>Python</li>
+    <li>HTML</li>
     
     <p><a href="mailto: bprentice@hawk.iit.edu"><em>bprentice@hawk.iit.edu</em></a></p>
   </body>
