--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>Braedan's Resume</title>
@@ -9,8 +9,8 @@
       <nav>
         <ul>
           <li><a href="index.html">Resume</a></li>
-          <li>n/a</li>
-          <li>n/a</li>
+          <li><a href="lacrosse.html">Lacrosse</a></li>
+          <li><a href="garden_center.html">Garden Center</a></li>
         </ul>
       </nav>
     </header>
@@ -22,17 +22,21 @@
     <p>Jones College Prep</p>
 
     <h2>Clubs/Sports</h2>
-    <li>Lacrosse</li>
-    <li>Computer Science Honor Society (CSHS)</li>
-    <li>Career Development Club</li>
+    <ul>
+      <li>Lacrosse</li>
+      <li>Computer Science Honor Society (CSHS)</li>
+      <li>Career Development Club</li>
+    </ul>
 
     <h2>Work</h2>
     <p>Farmers Market - Chicago's Garden Center</p>
 
     <h2>Skills</h2>
-    <li>Java</li>
-    <li>Python</li>
-    <li>HTML</li>
+    <ul>
+      <li>Java</li>
+      <li>Python</li>
+      <li>HTML</li>
+    </ul>
     
     <p><a href="mailto: bprentice@hawk.iit.edu"><em>bprentice@hawk.iit.edu</em></a></p>
   </body>
