--- a/lacrosse.html
+++ b/lacrosse.html
@@ -10,7 +10,7 @@
         <ul>
           <li><a href="index.html">Resume</a></li>
           <li><a href="lacrosse.html">Lacrosse</a></li>
-          <li>n/a</li>
+          <li><a href="garden_center.html">Garden Center</a></li>
         </ul>
       </nav>
     </header>
@@ -23,7 +23,7 @@
     <p>Lacrosse has been at the NCAA level since 1971 but has had intercollegiate games since the late 17th century. Here at IIT there is a division three program.</p>
 
     <h2>Professional Lacrosse</h2>
-    <p>The PLL is the current professional lacrosse league after its absorbtion of the MLL many years ago. There are no local teams until next year and they play from city to city every weekend.</p>
-    <img src="pll_lacrosse.gif" alt="Picture of Lacrosse Players" width="710" height="400">
+    <p>The PLL is the current professional lacrosse league after its absorbtion of the MLL many years ago. There are no local teams until possibly next year and they play from city to city every weekend.</p>
+    <img src="pll_lacrosse.gif" alt="Picture of PLL Players" width="710" height="400">
   </body>
 </html>
