--- a/garden_center.html
+++ b/garden_center.html
@@ -10,13 +10,13 @@
         <ul>
           <li><a href="index.html">Resume</a></li>
           <li><a href="lacrosse.html">Lacrosse</a></li>
-          <li><a href="plants.html">Garden Center</li>
+          <li><a href="plants.html">Garden Center</a></li>
         </ul>
       </nav>
     </header>
     <h2>Garden Center</h2>
     <p>The garden center has a wide variety of plants that range from full blown trees to small perenials and tropical plants.</p>
-    <img src="garden center picture.jpg" alt="Picture of Garden Center Signs" width="400" height="710">
+    <img src="garden center picture.jpg" alt="Picture of Garden Center Signs" width="300" height="510">
     
     <h2>What I Do at the Garden Center</h2>
     <ul>
