--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </header>
 
     <h1>Braedan's Resume</h1>
+    <p>Braedan Prentice - he/him </p>
     <p>bprentice@hawk.iit.edu</p>
 
     <h2>School</h2>
@@ -31,13 +32,11 @@
     <h2>Work</h2>
     <p>Farmers Market - Chicago's Garden Center</p>
 
-    <h2>Skills</h2>
+    <h2>Computer Science Skills</h2>
     <ul>
       <li>Java</li>
       <li>Python</li>
       <li>HTML</li>
     </ul>
-    
-    <p><a href="mailto: bprentice@hawk.iit.edu"><em>bprentice@hawk.iit.edu</em></a></p>
   </body>
 </html>
