--- a/garden_center.html
+++ b/garden_center.html
@@ -16,7 +16,7 @@
     </header>
     <h2>Garden Center</h2>
     <p>The garden center has a wide variety of plants that range from full blown trees to small perenials and tropical plants.</p>
-    <img src="garden center picture.jpg" alt="Picture of Garden Center Signs" width="300" height="510">
+    <img src="garden_center_picture.jpg" alt="Picture of Garden Center Signs" width="300" height="510">
     
     <h2>What I Do at the Garden Center</h2>
     <ul>
@@ -26,6 +26,6 @@
       <li>Sweep under the trees</li>
     </ul>
     <p>One of the most memorable moments was early in my career when a very experienced coworker had to teach me how to sweep properly.</p>
-    <iframe  width="560" height="315"  src="https://www.youtube.com/embed/Vs6awg-BJHo?si=r8nGU1vKpRNHAIfq"></iframe>
+    <iframe  width="560" height="315" src="https://www.youtube.com/embed/Vs6awg-BJHo?si=r8nGU1vKpRNHAIfq"></iframe>
   </body>
 </html>
