--- a/index.html
+++ b/index.html
@@ -24,19 +24,20 @@
 
     <h2>Clubs/Sports</h2>
     <ul>
-      <li>Lacrosse</li>
-      <li>Computer Science Honor Society (CSHS)</li>
-      <li>Career Development Club</li>
+      <li>Lacrosse - Captian, 4 year starter, 2 time city champ</li>
+      <li>Basketball - Retired after freshman year</li>
+      <li>Computer Science Honor Society (CSHS) - Jones Jam Jr, 3 year member</li>
+      <li>Career Development Club - New member</li>
     </ul>
 
     <h2>Work</h2>
-    <p>Farmers Market - Chicago's Garden Center</p>
+    <p>I spent the past summer and part of the school year at the Farmers Market - Chicago's Garden Center. I worked in the lot a few days a week.</p>
 
     <h2>Computer Science Skills</h2>
     <ul>
-      <li>Java</li>
-      <li>Python</li>
-      <li>HTML</li>
+      <li>Java - Proficient</li>
+      <li>Python - Sufficient</li>
+      <li>HTML + CSS - Sufficient</li>
     </ul>
   </body>
 </html>
