--- a/garden_center.html
+++ b/garden_center.html
@@ -16,7 +16,7 @@
     </header>
     <h2>Garden Center</h2>
     <p>The garden center has a wide variety of plants that range from full blown trees to small perenials and tropical plants.</p>
-    <img src="garden_center_picture.jpg" alt="Picture of Garden Center Signs" width="300" height="510">
+    <img src="media/garden_center_picture.jpg" alt="Picture of Garden Center Signs" width="300" height="510">
     
     <h2>What I Do at the Garden Center</h2>
     <ul>
