--- a/lacrosse.html
+++ b/lacrosse.html
@@ -17,7 +17,7 @@
     <h2>What is Lacrosse?</h2>
     <p>Lacrosse is a contact team sport played with a lacrosse stick and a lacrosse ball. It is the oldest organized sport in North America, with its origins with the indigenous people of North America.</p>
     <p>It is still played by the indigenous Haudenosaunee team in the world championships.</p>
-    <img src="media/lacrosse_players.webp" alt="Picture of Lacrosse Players">
+    <img src="media/lacrosse_players.jpg" alt="Picture of Lacrosse Players">
     
     <h2>Collegiate Lacrosse</h2>
     <p>Lacrosse has been at the NCAA level since 1971 but has had intercollegiate games since the late 17th century. Here at IIT there is a division three program.</p>
