--- a/lacrosse.html
+++ b/lacrosse.html
@@ -15,14 +15,20 @@
         </ul>
       </nav>
     </header>
-    <h2>What is Lacrosse?</h2>
-    <p>Lacrosse is a contact team sport played with a lacrosse stick and a lacrosse ball. It is the oldest organized sport in North America, with its origins with the indigenous people of North America.</p>
-    <p>It is still played by the indigenous Haudenosaunee team in the world championships.</p>
-    <img src="media/lacrosse_players.jpg" alt="Picture of Lacrosse Players">
-    <h2>Collegiate Lacrosse</h2>
-    <p>Lacrosse has been at the NCAA level since 1971 but has had intercollegiate games since the late 17th century. Here at IIT there is a division three program.</p>
-    <h2>Professional Lacrosse</h2>
-    <p>The PLL is the current professional lacrosse league after its absorbtion of the MLL many years ago. There are no local teams until possibly next year and they play from city to city every weekend.</p>
-    <img src="media/pll_lacrosse.gif" alt="Picture of PLL Players">
+
+    <section>
+      <h2>What is Lacrosse?</h2>
+      <p>Lacrosse is a contact team sport played with a lacrosse stick and a lacrosse ball. It is the oldest organized sport in North America, with its origins with the indigenous people of North America.</p>
+      <p>It is still played by the indigenous Haudenosaunee team in the world championships.</p>
+      <img src="media/lacrosse_players.jpg" alt="Picture of Lacrosse Players">
+    </section>
+
+    <section>
+      <h2>Collegiate Lacrosse</h2>
+      <p>Lacrosse has been at the NCAA level since 1971 but has had intercollegiate games since the late 17th century. Here at IIT there is a division three program.</p>
+      <h2>Professional Lacrosse</h2>
+      <p>The PLL is the current professional lacrosse league after its absorbtion of the MLL many years ago. There are no local teams until possibly next year and they play from city to city every weekend.</p>
+      <img src="media/pll_lacrosse.gif" alt="Picture of PLL Players">
+    </section>
   </body>
 </html>
